--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <table>
   <tr>
-    <td>LINES</td>
-    <td>PIXELS</td>
-    <td>PAPER</td>
-    <td>INK</td>
+    <td><a href='lines.html'>LINES</a></td>
+    <td><a href='pixels.html'>PIXELS</a></td>
+    <td><a href='paper.html'>PAPER</a></td>
+    <td><a href='ink.html'>INK</a></td>
   </tr>
 </table>
